# birdy

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  TODO.rst  birdy-complete.sh  bootstrap.sh  buildout.cfg  custom.cfg.example  environment-docs.yml  environment.yml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_extra.txt  setup.cfg  setup.py  testdata.json  versions.cfg
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: main.yml  publish-pypi.yml  tag-testpypi.yml
birdy/: __init__.py  _compat.py  birdy.py  cmdline.py  dependencies.py  esgsearch.py  exceptions.py  native.py  utils.py  wpsparser.py
birdy/cli/: __init__.py  base.py  misc.py  run.py  types.py
birdy/client/: __init__.py  base.py  converters.py  notebook.py  outputs.py  utils.py
birdy/ipyleafletwfs/: README.md  __init__.py  base.py
birdy/native/: __init__.py  client.py  converters.py  utils.py
birdy/templates/: cmd.py.j2
docs/: Makefile  make.bat
examples/: myclick.py
ipyleafletwfs/: README.md  __init__.py  base.py
notebooks/: Interactive.ipynb  README.md  agu2018_demo.ipynb  c4cds.ipynb  emu-example.ipynb  environment.yml  output_sanitize.cfg  owslib-esgfwps.ipynb  owslib.ipynb
requirements/: deploy.txt
tests/: __init__.py  common.py  test_birdy.py  test_birdy_samples.py  test_cli.py  test_client.py  test_converters.py  test_dependencies.py  test_native.py  test_notebook.py  test_utils.py  test_wpsparser.py
unit_tests/: __init__.py  test_birdy.py  test_birdy_samples.py  test_utils.py  test_wpsparser.py  the_great_gatsby.txt
wfs/: base.py
wfs-ipyleaflet/: README  base.py
(+48 files in other folders)
