[metadata]
description-file = README.rst

[tool:pytest]
python_files = test_*.py
testpaths = tests
addopts =
	--strict
	--tb=native
markers =
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
max-line-length = 120
exclude =
	.git,
	__pycache__,
	docs,
	dist,
	examples,
	templates,
	build,
	.eggs,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120
